--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+    <!-- Use jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <title>Hello, world!</title>
   </head>
-  <body>
-    <h1>Hello, world!</h1>
+  <body onLoad="HTML_Load('./_header.html','#header');">
+    <div id='header'></div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
@@ -24,4 +26,19 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
   </body>
+  <script>
+    function HTML_Load(_html,replace){
+      var xmlhttp = new XMLHttpRequest();
+      xmlhttp.open("GET",_html,true);
+      xmlhttp.onreadystatechange = function(){
+      if(xmlhttp.readyState == 4 && xmlhttp.status==200){
+                var data = xmlhttp.responseText;
+              var elem = document.querySelector(replace);
+              elem.innerHTML= data;
+          return data;
+        }
+      }
+      xmlhttp.send(null);
+    }
+  </script>
 </html>
