--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Read index.js. -->
   <script src="index.js"></script>
 
-  <title>index</title>
+  <title>トップ</title>
 </head>
 
 <body onLoad="HTML_Load('_header.html','header');">
