Add a page for developers.

--- a/check-full-avarable.html
+++ b/check-full-avarable.html
@@ -24,14 +24,14 @@
   <main>
     <div class="container my-4">
       <div class="text-center mb-4">
-        <h5>XX月極駐車場の空き状況</h5>
+        <h5>YY月極駐車場の空き状況</h5>
         <p class="fs-1 text-warning fw-bold">満車</p>
         <p class="text-warning lh-base rounded bg-light p-3">
-          最短で60日後に空く区画があります
+          最短で20日後に空く区画があります
         </p>
       </div>
       <div class="table-responsive">
-        <table class="table small">
+        <table class="table">
           <thead>
             <tr>
               <th scope="col">No</th>
