--- a/check-full.html
+++ b/check-full.html
@@ -24,7 +24,7 @@
   <main>
     <div class="container my-4">
       <div class="text-center mb-4">
-        <h5>XX月極駐車場の空き状況</h5>
+        <h5>ZZ月極駐車場の空き状況</h5>
         <p class="fs-1 text-danger fw-bold">満車</p>
         <p class="text-danger lh-base rounded bg-light p-3">
           現時点で空く見込みはありません。
@@ -34,7 +34,7 @@
         </p>
       </div>
       <div class="table-responsive">
-        <table class="table small">
+        <table class="table">
           <thead>
             <tr>
               <th scope="col">No</th>
