--- a/index.html
+++ b/index.html
@@ -25,9 +25,23 @@
   <header></header>
   <main>
     <div class="container my-4">
-      <div class="alert alert-success" role="alert">
-        ログインに成功しました
+      <div class="text-center mb-4">
+        <h5>開発用ページ</h5>
       </div>
+      <ul>
+        <li class="mb-2">
+          <a href="login.html">法人ログイン</a>
+        </li>
+        <li class="mb-2">
+          <a href="check-full.html">一般 - 空き状況 - 満車</a>
+        </li>
+        <li class="mb-2">
+          <a href="check-full-avarable.html">一般 - 空き状況 - 満車(申し込み可)</a>
+        </li>
+        <li class="mb-2">
+          <a href="check-empty.html">一般 - 空き状況 - 空き</a>
+        </li>
+      </ul>
     </div>
   </main>
 
