--- a/login.html
+++ b/login.html
@@ -51,7 +51,8 @@
       let username = document.getElementById('username').value;
       let password = document.getElementById('password').value;
       if (username == "user" && password == "1234") {
-        location.href = "index.html";
+        // リダイレクト先未実装
+        // location.href = "index.html";
       } else {
         var alert = document.querySelector('.alert').classList.remove('d-none');
       }
