--- a/_header.html
+++ b/_header.html
@@ -8,20 +8,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">トップ</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="login.html">法人 - ログイン</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="check-full.html">一般 - 空き状況 - 満車</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="check-full-avarable.html">一般 - 空き状況 - 満車(申し込み可)</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="check-empty.html">一般 - 空き状況 - 空き</a>
-        </li>
+          <a class="nav-link" href="login.html">法人向けログイン</a>
     </div>
   </div>
 </nav>
