--- a/check-empty.html
+++ b/check-empty.html
@@ -28,7 +28,7 @@
         <p class="fs-1 text-success fw-bold">空きあり</p>
       </div>
       <div class="table-responsive">
-        <table class="table small">
+        <table class="table">
           <thead>
             <tr>
               <th scope="col">No</th>
