--- a/login.html
+++ b/login.html
@@ -20,7 +20,20 @@
 </head>
 
 <body onLoad="HTML_Load('_header.html','header');">
-  <header></header>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">aitemasuka</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="login.html">法人向けログイン</a>
+      </div>
+    </div>
+  </nav>
   <main>
     <div class="container my-4">
       <div class="d-none alert alert-danger" role="alert">
@@ -32,7 +45,7 @@
       <div class="input-group mb-3">
         <input id="username" type="text" class="form-control" placeholder="ユーザ名" aria-label="Username">
       </div>
-      
+
       <div class="input-group mb-3">
         <input id="password" type="text" class="form-control" placeholder="パスワード" aria-label="Password">
       </div>
