Remove unuse code.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <title>トップ</title>
 </head>
 
-<body onLoad="HTML_Load('_header.html','header');">
+<body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">aitemasuka</a>
