--- a/check-empty.html
+++ b/check-empty.html
@@ -19,7 +19,7 @@
   <title>空き状況確認</title>
 </head>
 
-<body onLoad="HTML_Load('_header.html','header');">
+<body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">aitemasuka</a>
