--- a/check-empty.html
+++ b/check-empty.html
@@ -64,14 +64,14 @@
               <td class="text-success fw-bold">空</td>
               <td>6,000</td>
               <td>-</td>
-              <td><button class="btn btn-primary btn-sm">申し込む</button></td>
+              <td><a role="button" href="form.html" class="btn btn-primary btn-sm">申し込む</button></td>
             </tr>
             <tr>
               <th scope="row">3</th>
               <td class="text-success fw-bold">空</td>
               <td>6,000</td>
               <td>-</td>
-              <td><button class="btn btn-primary btn-sm">申し込む</button></td>
+              <td><a role="button" href="form.html" class="btn btn-primary btn-sm">申し込む</button></td>
             </tr>
             <tr>
               <th scope="row">4</th>
