--- a/check-full-avarable.html
+++ b/check-full-avarable.html
@@ -95,7 +95,7 @@
               <td class="text-warning fw-bold">満</td>
               <td>6,000</td>
               <td>2022/06/01~</td>
-              <td><button class="btn btn-primary btn-sm">申し込む</button></td>
+              <td><a role="button" href="form.html" class="btn btn-primary btn-sm">申し込む</button></td>
             </tr>
           </tbody>
         </table>
