--- a/form.html
+++ b/form.html
@@ -16,7 +16,7 @@
   <!-- Read index.js. -->
   <script src="index.js"></script>
 
-  <title>法人向けログイン</title>
+  <title>申し込みフォーム</title>
 </head>
 
 <body>
@@ -36,22 +36,53 @@
   </nav>
   <main>
     <div class="container my-4">
-      <div class="d-none alert alert-danger" role="alert">
-        ユーザ名とパスワードの組み合わせが間違っています
+      <div class="d-none alert alert-success" role="alert">
+        申し込みが完了しました。入力頂いたメールアドレス宛に確認メールを送信しましたのでご確認ください。
       </div>
       <div class="text-center mb-4">
-        <h5>法人向けログイン</h5>
-      </div>
-      <div class="input-group mb-3">
-        <input id="username" type="text" class="form-control" placeholder="ユーザ名" aria-label="Username">
+        <h5>申し込みフォーム</h5>
       </div>
 
+      <p class="lh-base bg-light rounded p-3">
+        駐車場名: XX月極駐車場
+        <br />
+        住所: 福岡県〇〇市△△区7-8-9
+        <br />
+        申し込み区画: No.9
+      </p>
+
+      <h6>名前（漢字）</h6>
       <div class="input-group mb-3">
-        <input id="password" type="text" class="form-control" placeholder="パスワード" aria-label="Password">
+        <input type="text" class="form-control" placeholder="例: 山田花子" >
+      </div>
+
+      <h6>名前（カナ）</h6>
+      <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="例: ヤマダハナコ" >
+      </div>
+
+      <h6>住所</h6>
+      <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="例: 福岡県〇〇市△△区1-2-3" >
+      </div>
+
+      <h6>電話番号</h6>
+      <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="例: 012-345-678" >
+      </div>
+
+      <h6>メールアドレス</h6>
+      <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="例: xxx@example.com" >
+      </div>
+
+      <h6>利用開始希望日</h6>
+      <div class="input-group mb-3">
+        <input type="date" class="form-control" >
       </div>
 
       <div class="d-grid gap-2">
-        <button id="login-button" class="btn btn-primary" type="button" onclick="onclick_login_button();">ログイン</button>
+        <button id="login-button" class="btn btn-primary" type="button" onclick="onclick_login_button();">申し込む</button>
       </div>
     </div>
   </main>
@@ -61,14 +92,7 @@
     crossorigin="anonymous"></script>
   <script>
     function onclick_login_button() {
-      let username = document.getElementById('username').value;
-      let password = document.getElementById('password').value;
-      if (username == "user" && password == "1234") {
-        // リダイレクト先未実装
-        // location.href = "index.html";
-      } else {
-        var alert = document.querySelector('.alert').classList.remove('d-none');
-      }
+      var alert = document.querySelector('.alert').classList.remove('d-none');
     }
   </script>
 </body>
