--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
       <ul>
         <li class="mb-2">
-          <a href="login.html">法人ログイン</a>
+          <a href="login.html">法人 - ログイン</a>
         </li>
         <li class="mb-2">
           <a href="check-full.html">一般 - 空き状況 - 満車</a>
@@ -53,6 +53,9 @@
         </li>
         <li class="mb-2">
           <a href="check-empty.html">一般 - 空き状況 - 空き</a>
+        </li>
+        <li class="mb-2">
+          <a href="form.html">一般 - 申し込みフォーム</a>
         </li>
       </ul>
     </div>
