--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
         <li class="mb-2">
           <a href="form.html">一般 - 申し込みフォーム</a>
         </li>
+        <li class="mb-2">
+          <a href="mail.html">一般 - 申し込み確認メール</a>
+        </li>
       </ul>
     </div>
   </main>
