--- a/mail.html
+++ b/mail.html
@@ -13,7 +13,7 @@
   <!-- Read index.js. -->
   <script src="index.js"></script>
 
-  <title>申し込みフォーム</title>
+  <title>申し込み確認メール</title>
 </head>
 
 <body>
@@ -33,65 +33,37 @@
   </nav>
   <main>
     <div class="container my-4">
-      <div class="d-none alert alert-success" role="alert">
-        申し込みが完了しました。入力頂いたメールアドレス宛に確認メールを送信しましたのでご確認ください。
-      </div>
-      <div class="text-center mb-4">
-        <h5>申し込みフォーム</h5>
-      </div>
-
+      <p>この度はaitemasukaをご利用いただきありがとうございます。</p>
+      <p>お申込みを受け付けました。<br />申込み結果につきましては、お電話またはメールでご連絡いたしますのでしばらくお待ちください。</p>
+      <p>■お申し込み内容</p>
       <p class="lh-base bg-light rounded p-3">
         駐車場名: XX月極駐車場
         <br />
         住所: 福岡県〇〇市△△区7-8-9
         <br />
         申し込み区画: No.9
+        <br />
+        名前（漢字）: 山田花子
+        <br />
+        名前（カナ）: ヤマダハナコ
+        <br />
+        住所: 福岡県〇〇市△△区1-2-3
+        <br />
+        電話番号: 012-345-678
+        <br />
+        メールアドレス: xxx@example.com
+        <br />
+        利用開始希望日: 2022/06/10
       </p>
-
-      <h6>名前（漢字）</h6>
-      <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="例: 山田花子" >
-      </div>
-
-      <h6>名前（カナ）</h6>
-      <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="例: ヤマダハナコ" >
-      </div>
-
-      <h6>住所</h6>
-      <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="例: 福岡県〇〇市△△区1-2-3" >
-      </div>
-
-      <h6>電話番号</h6>
-      <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="例: 012-345-678" >
-      </div>
-
-      <h6>メールアドレス</h6>
-      <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="例: xxx@example.com" >
-      </div>
-
-      <h6>利用開始希望日</h6>
-      <div class="input-group mb-3">
-        <input type="date" class="form-control" >
-      </div>
-
-      <div class="d-grid gap-2">
-        <button id="login-button" class="btn btn-primary" type="button" onclick="onclick_login_button();">申し込む</button>
-      </div>
+      <p>
+        ※このメールは自動送信の為、返信を受け付けておりません。お心当たりがない場合は破棄のほどよろしくお願いいたします。
+      </p>
     </div>
   </main>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-  <script>
-    function onclick_login_button() {
-      var alert = document.querySelector('.alert').classList.remove('d-none');
-    }
-  </script>
 </body>
 
 </html>
