Add park pages.

--- a/check-full-avarable.html
+++ b/check-full-avarable.html
@@ -41,7 +41,7 @@
         </p>
       </div>
       <div class="table-responsive">
-        <table class="table">
+        <table class="table text-nowrap">
           <thead>
             <tr>
               <th scope="col">No</th>
