--- a/check-empty.html
+++ b/check-empty.html
@@ -38,7 +38,7 @@
         <p class="fs-1 text-success fw-bold">空きあり</p>
       </div>
       <div class="table-responsive">
-        <table class="table">
+        <table class="table text-nowrap">
           <thead>
             <tr>
               <th scope="col">No</th>
