--- a/park-show.html
+++ b/park-show.html
@@ -16,7 +16,7 @@
   <!-- Bootstrap icon -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
-  <title>駐車場一覧</title>
+  <title>XX月極駐車場</title>
 </head>
 
 <body>
@@ -36,30 +36,40 @@
   </nav>
   <main>
     <div class="container my-4">
+      <div class="d-none alert alert-danger" role="alert">
+        ユーザ名とパスワードの組み合わせが間違っています
+      </div>
       <div class="text-center mb-4">
-        <h5>駐車場一覧</h5>
+        <h5>XX月極駐車場</h5>
+        <p class="fs-1 text-success fw-bold">空きあり</p>
       </div>
       <div class="my-2">
-        <a href="park-create.html" class="text-decoration-none">駐車場を追加する</a>
+        <a href="park-create.html" class="text-decoration-none">区画を追加する</a>
       </div>
       <div class="table-responsive">
         <table class="table text-nowrap">
           <thead>
             <tr>
               <th scope="col">No</th>
-              <th scope="col">駐車場名</th>
               <th scope="col">空き状況</th>
+              <th scope="col">賃料</th>
+              <th scope="col">敷金</th>
+              <th scope="col">その他賃料</th>
+              <th scope="col">その他賃料の詳細</th>
               <th scope="col"></th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <th scope="row">1</th>
-              <td>XX月極駐車場</td>
-              <td class="text-danger fw-bold">満</td>
+              <td><button class="btn border" onclick="onclick_switch_button(this);"><span class="text-danger fw-bold">満</span> <span class="text-light fw-bold">空</span></button></td>
+              <td>6,000</td>
+              <td>6,000</td>
+              <td>600</td>
+              <td>保証料</td>
               <td>
                 <ul class="list-group list-group-horizontal">
-                  <li class="list-group-item"><a href="park-show.html"><i class="bi bi-info-circle"></i></a></li>
+                  <li class="list-group-item"><a href="#"><i class="bi bi-info-circle"></i></a></li>
                   <li class="list-group-item"><a href="park-edit.html"><i class="bi bi-pencil-square"></i></a></li>
                   <li class="list-group-item"><a href="park-delete.html"><i class="bi bi-x-circle-fill"></i></a></li>
                 </ul>
@@ -67,11 +77,14 @@
             </tr>
             <tr>
               <th scope="row">2</th>
-              <td>YY月極駐車場</td>
-              <td class="text-success fw-bold">空</td>
+              <td><button class="btn border" onclick="onclick_switch_button(this);"><span class="text-light fw-bold">満</span> <span class="text-success fw-bold">空</span></button></td>
+              <td>6,000</td>
+              <td>6,000</td>
+              <td>600</td>
+              <td>保証料</td>
               <td>
                 <ul class="list-group list-group-horizontal">
-                  <li class="list-group-item"><a href="park-show.html"><i class="bi bi-info-circle"></i></a></li>
+                  <li class="list-group-item"><a href="#"><i class="bi bi-info-circle"></i></a></li>
                   <li class="list-group-item"><a href="park-edit.html"><i class="bi bi-pencil-square"></i></a></li>
                   <li class="list-group-item"><a href="park-delete.html"><i class="bi bi-x-circle-fill"></i></a></li>
                 </ul>
@@ -86,6 +99,26 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
+    <script>
+      function onclick_switch_button(btn) {
+        var result = window.alert('空き状況を更新します');
+        var children = btn.querySelectorAll('span');
+        children.forEach(element => {
+          if (element.classList.contains('text-light')) {
+            element.classList.remove('text-light');
+            if (element.textContent == "満") {
+              element.classList.add('text-danger');
+            } else {
+              element.classList.add('text-success');  
+            }
+          } else {
+            element.classList.remove('text-danger');
+            element.classList.remove('text-success');
+            element.classList.add('text-light');
+          }
+        });
+      }
+    </script>
 </body>
 
 </html>
