--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
           <a href="park-delete.html">法人 - 駐車場削除</a>
         </li>
         <li class="mb-2">
+          <a href="park-qr.html">法人 - QRコード</a>
+        </li>
+        <li class="mb-2">
           <a href="check-full.html">一般 - 空き状況 - 満車</a>
         </li>
         <li class="mb-2">
