--- a/park-show.html
+++ b/park-show.html
@@ -46,6 +46,9 @@
       <div class="my-2">
         <a href="park-create.html" class="text-decoration-none">区画を追加する</a>
       </div>
+      <div class="my-2">
+        <a href="park-qr.html" class="text-decoration-none">バーコードを印刷する</a>
+      </div>
       <div class="table-responsive">
         <table class="table text-nowrap">
           <thead>
@@ -69,7 +72,6 @@
               <td>保証料</td>
               <td>
                 <ul class="list-group list-group-horizontal">
-                  <li class="list-group-item"><a href="#"><i class="bi bi-info-circle"></i></a></li>
                   <li class="list-group-item"><a href="park-edit.html"><i class="bi bi-pencil-square"></i></a></li>
                   <li class="list-group-item"><a href="park-delete.html"><i class="bi bi-x-circle-fill"></i></a></li>
                 </ul>
@@ -84,7 +86,6 @@
               <td>保証料</td>
               <td>
                 <ul class="list-group list-group-horizontal">
-                  <li class="list-group-item"><a href="#"><i class="bi bi-info-circle"></i></a></li>
                   <li class="list-group-item"><a href="park-edit.html"><i class="bi bi-pencil-square"></i></a></li>
                   <li class="list-group-item"><a href="park-delete.html"><i class="bi bi-x-circle-fill"></i></a></li>
                 </ul>
@@ -99,7 +100,6 @@
               <td>保証料</td>
               <td>
                 <ul class="list-group list-group-horizontal">
-                  <li class="list-group-item"><a href="#"><i class="bi bi-info-circle"></i></a></li>
                   <li class="list-group-item"><a href="park-edit.html"><i class="bi bi-pencil-square"></i></a></li>
                   <li class="list-group-item"><a href="park-delete.html"><i class="bi bi-x-circle-fill"></i></a></li>
                 </ul>
@@ -114,7 +114,6 @@
               <td>保証料</td>
               <td>
                 <ul class="list-group list-group-horizontal">
-                  <li class="list-group-item"><a href="#"><i class="bi bi-info-circle"></i></a></li>
                   <li class="list-group-item"><a href="park-edit.html"><i class="bi bi-pencil-square"></i></a></li>
                   <li class="list-group-item"><a href="park-delete.html"><i class="bi bi-x-circle-fill"></i></a></li>
                 </ul>
@@ -129,7 +128,6 @@
               <td>保証料</td>
               <td>
                 <ul class="list-group list-group-horizontal">
-                  <li class="list-group-item"><a href="#"><i class="bi bi-info-circle"></i></a></li>
                   <li class="list-group-item"><a href="park-edit.html"><i class="bi bi-pencil-square"></i></a></li>
                   <li class="list-group-item"><a href="park-delete.html"><i class="bi bi-x-circle-fill"></i></a></li>
                 </ul>
@@ -144,7 +142,6 @@
               <td>保証料</td>
               <td>
                 <ul class="list-group list-group-horizontal">
-                  <li class="list-group-item"><a href="#"><i class="bi bi-info-circle"></i></a></li>
                   <li class="list-group-item"><a href="park-edit.html"><i class="bi bi-pencil-square"></i></a></li>
                   <li class="list-group-item"><a href="park-delete.html"><i class="bi bi-x-circle-fill"></i></a></li>
                 </ul>
@@ -159,7 +156,6 @@
               <td>保証料</td>
               <td>
                 <ul class="list-group list-group-horizontal">
-                  <li class="list-group-item"><a href="#"><i class="bi bi-info-circle"></i></a></li>
                   <li class="list-group-item"><a href="park-edit.html"><i class="bi bi-pencil-square"></i></a></li>
                   <li class="list-group-item"><a href="park-delete.html"><i class="bi bi-x-circle-fill"></i></a></li>
                 </ul>
@@ -174,7 +170,6 @@
               <td>保証料</td>
               <td>
                 <ul class="list-group list-group-horizontal">
-                  <li class="list-group-item"><a href="#"><i class="bi bi-info-circle"></i></a></li>
                   <li class="list-group-item"><a href="park-edit.html"><i class="bi bi-pencil-square"></i></a></li>
                   <li class="list-group-item"><a href="park-delete.html"><i class="bi bi-x-circle-fill"></i></a></li>
                 </ul>
