Add space pages.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,18 @@
           <a href="park-qr.html">法人 - QRコード</a>
         </li>
         <li class="mb-2">
+          <a href="space-create.html">法人 - 区画追加</a>
+        </li>
+        <li class="mb-2">
+          <a href="space-edit.html">法人 - 区画更新</a>
+        </li>
+        <li class="mb-2">
+          <a href="space-delete.html">法人 - 区画削除</a>
+        </li>
+        <li class="mb-2">
+          <a href="space-copy.html">法人 - 区画コピー</a>
+        </li>
+        <li class="mb-2">
           <a href="check-full.html">一般 - 空き状況 - 満車</a>
         </li>
         <li class="mb-2">
