--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
           <a href="space-copy.html">法人 - 区画コピー</a>
         </li>
         <li class="mb-2">
+          <a href="form-edit.html">法人 - 申し込みフォーム編集</a>
+        </li>
+        <li class="mb-2">
           <a href="check-full.html">一般 - 空き状況 - 満車</a>
         </li>
         <li class="mb-2">
