--- a/park-show.html
+++ b/park-show.html
@@ -46,6 +46,9 @@
       <div class="my-2">
         <a href="park-qr.html" class="text-decoration-none">バーコードを印刷する</a>
       </div>
+      <div class="my-2">
+        <a href="form-edit.html" class="text-decoration-none">申し込みフォームを編集する</a>
+      </div>
       <div class="table-responsive">
         <table class="table text-nowrap">
           <thead>
